# rocketsim-oxide

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
bullet/: Cargo.toml
bullet/src/: lib.rs
examples/: ball.rs  ball2.rs  car.rs  car_col.rs  car_stack.rs  car_tri.rs  rlviser.rs  stress.rs  stuff.rs
rocketsim/: Cargo.toml
rocketsim/examples/: ball.rs  ball2.rs  car.rs  car_col.rs  car_stack.rs  car_tri.rs  flamegraph.rs  rlviser.rs  stress.rs  stuff.rs  wheel_tri.rs
rocketsim/src/: collision_meshes.rs  consts.rs  flat_ext.rs  lib.rs  rlviser.rs
rocketsim/src/bullet/collision/broadphase/: broadphase_proxy.rs  bvh.rs  grid_broadphase.rs  mod.rs  overlapping_pair_cache.rs
rocketsim/src/bullet/collision/dispatch/: box_box_detector.rs  collision_dispatcher.rs  collision_object.rs  collision_object_wrapper.rs  collision_world.rs  compound_collision_algorithm.rs  convex_concave_collision_algorithm.rs  convex_plane_collision_algorithm.rs  internal_edge_utility.rs  mod.rs  obb_obb_collision_algorithm.rs  ray_callbacks.rs  sphere_obb_collision_algorithm.rs  tri_bvh_util.rs
rocketsim/src/bullet/collision/narrowphase/: manifold_point.rs  persistent_manifold.rs
rocketsim/src/bullet/collision/shapes/: box_shape.rs  bvh_triangle_mesh_shape.rs  collision_margin.rs  collision_shape.rs  compound_shape.rs  concave_shape.rs  convex_internal_shape.rs  mod.rs  optimized_bvh.rs  polyhedral_convex_shape.rs  sphere_shape.rs  static_plane_shape.rs  triangle_callback.rs  triangle_info_map.rs  triangle_mesh.rs  triangle_mesh_shape.rs  triangle_shape.rs
rocketsim/src/bullet/dynamics/: discrete_dynamics_world.rs  mod.rs  rigid_body.rs  world.rs
rocketsim/src/bullet/dynamics/constraint_solver/: contact_constraint.rs  contact_solver_info.rs  mod.rs  sequential_impulse_constraint_solver.rs  solver_constraint.rs
rocketsim/src/bullet/dynamics/vehicle/: mod.rs  raycaster.rs  vehicle_rl.rs  wheel_info.rs
rocketsim/src/bullet/linear_math/: aabb_util_2.rs  mod.rs  obb.rs  ray_packet.rs  transform_util.rs
rocketsim/src/shared/: aabb.rs  bvh.rs  mod.rs
rocketsim/src/sim/: arena.rs  arena_config.rs  ball.rs  ball_hit_info.rs  boost_pad.rs  boost_pad_grid.rs  car.rs  car_controls.rs  collision_masks.rs  collision_meshes.rs  consts.rs  game_mode.rs  game_state.rs  mod.rs  mutator_config.rs  phys_state.rs  team.rs
rocketsim/src/sim/ball/: arena_impl.rs  ball.rs  ball_state.rs  base.rs  mod.rs
rocketsim/src/sim/boost_pad/: arena_impl.rs  base.rs  boost_pad.rs  boost_pad_config.rs  boost_pad_grid.rs  boost_pad_state.rs  mod.rs
rocketsim/src/sim/car/: base.rs  car.rs  car_body_config.rs  car_config.rs  car_controls.rs  car_info.rs  car_state.rs  mod.rs
rocketsim/tests/: test_all.rs
rocketsim/tests/comparison_test/: all_test_cases.rs  control_seq.rs  controls_builder.rs  mod.rs  quick_controls.rs  setup.rs  state_compare.rs  state_convert.rs  test_case.rs  test_result.rs  test_result_state.rs
rocketsim_flat/: Cargo.toml  build.rs
rocketsim_flat/spec/: game_state.fbs
rocketsim_flat/src/: lib.rs
spec/: game_state.fbs
src/: arena.rs  bullet_link.rs  collision_mesh_file.rs  collision_meshes.rs  consts.rs  framework.rs  lib.rs  logging.rs  math.rs  mutator_config.rs  rlviser.rs
src/bullet/: mod.rs
(+159 files in other folders)
