[package]
name = "rocketsim"
version = "0.2.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
arrayvec = "0.7.6"
byteorder = "1.5.0"
fastrand = "2.3.0"
glam = "0.30.3"
log = "0.4.29"
planus = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf", optional = true }
env_logger = "0.11.8"

[build-dependencies]
planus-translation = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf", optional = true }
planus-codegen = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf", optional = true }
planus-types = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf", optional = true }

[features]
default = ["rlviser"]
rlviser = ["flatbuffer"]
flatbuffer = ["dep:planus", "dep:planus-translation", "dep:planus-codegen", "dep:planus-types"]

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
all = "warn"
nursery = "warn"
# pedantic = "warn"
