[package]
name = "rocketsim"
edition = "2024"
license-file.workspace = true
version.workspace = true

[dependencies]
ahash = "0.8.12"
arrayvec = "0.7.6"
byteorder = "1.5.0"
fastrand = "2.3.0"
log = "0.4.29"
env_logger = "0.11.8"
rocketsim_flat = { path = "../rocketsim_flat", optional = true }
glam = { workspace = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
rkyv = { version = "0.8.12", optional = true }

[dev-dependencies]
rocketsim = { path = ".", features = ["serde"] } # Self-dependency required for tests
rocketsim_rs = "0.36.0" # For comparing to original C++ RocketSim in tests

[features]
default = ["rlviser"]
rlviser = ["flatbuffer"]
flatbuffer = ["dep:rocketsim_flat"]
serde = ["dep:serde", "glam/serde"]
rkyv = ["dep:rkyv", "glam/rkyv"]

[lints.clippy]
all = "warn"
nursery = "warn"
# pedantic = "warn"
