[package]
name = "rocketsim_flat"
edition = "2024"
license-file.workspace = true
version.workspace = true

[dependencies]
planus = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
glam = { workspace = true }

[build-dependencies]
planus-translation = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-codegen = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
planus-types = { git = "https://github.com/swz-git/planus", rev = "a0b1fbf" }
